--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <div id="logo" class="grid_5">
         <h1>
           <a href="index.html" title="JS Bian Stone Equilibrium Therapy">
-            <div class="en" style="display:none">
+            <div class="en" style="display:inline">
               <span class="black">JS Bian Stone Equilibrium Therapy</span>
             </div>
-            <div class="zh" style="display:inline">
+            <div class="zh" style="display:none">
               <span class="black">JS 砭石平衡疗法</span>
             </div>
           </a>
