--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Bian stone equilibrium therapy is excellent for disease prevention, fitness, hea
   <div id="home-bottom" class="clearfix">
 
     <div class="en">
-      <h2>Our Sevices</h2>
+      <h2>Our Sevices,</h2>
 
       <div id="col1" class="grid_7">
         <li><h5><a href="#">Bian Stone Equilibrium Therapy (60min)	-	$60</a></h5></li>
@@ -113,7 +113,7 @@ Bian stone equilibrium therapy is excellent for disease prevention, fitness, hea
       
         <h4>Open</h4>
         <p>Monday, Wednesday, Friday, Sunday</p>
-        <p>9 A.M. to 8 P.M.</p>
+        <p>9 A.M. - 8 P.M.</p>
         </p>
       
         <h4>Address</h4>
